--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <section class="post mt-2">
         <div class="container" dir="ltr">
-            <div class="row justify-content-center Posts">
+            <div class="row  justify-content-center Posts">
 
 
                 <div class="col-3 card d-inline-block m-2 w.100" style="width: 18rem;">
@@ -292,9 +292,7 @@
                 </div>
                 <div class="modal-body">
                     <form action="#">
-                        <label class="mb-2" for="">Your Name </label> <input type="text" placeholder="Name"
-                            class="form-control mb-3">
-                        <label class="mb-2" for="">Your Family </label> <input type="text" placeholder="Family"
+                        <label class="mb-2" for="">Your Name </label> <input type="text" placeholder="Full Name"
                             class="form-control mb-3">
                         <label class="mb-2" for="">Your Email </label> <input type="email" placeholder="Email"
                             class="form-control mb-3">
